// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokenListItem handles clicking staking opens tab 1`] = `
<div>
  <div
    class="mm-box multichain-token-list-item mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--width-full mm-box--height-full"
    data-testid="multichain-token-list-item"
  >
    <a
      class="mm-box multichain-token-list-item__container-cell multichain-token-list-item__container-cell--clickable mm-box--padding-top-2 mm-box--padding-right-4 mm-box--padding-bottom-2 mm-box--padding-left-4 mm-box--display-flex mm-box--flex-direction-row mm-box--width-full"
      data-testid="multichain-token-list-button"
      href="#"
      style="height: 62px;"
    >
      <div
        class="mm-box mm-badge-wrapper multichain-token-list-item__badge mm-box--margin-right-4 mm-box--display-inline-block"
      >
        <div
          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-token mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full"
        >
          ?
        </div>
        <div
          class="mm-box mm-badge-wrapper__badge-container mm-badge-wrapper__badge-container--rectangular-bottom-right"
        >
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network multichain-token-list-item__badge__avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-default mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-2 box--border-style-solid"
          >
            <img
              alt="network logo"
              class="mm-avatar-network__network-image"
              src="./eth-logo.png"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box multichain-token-list-item__container-cell--text-container mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-center mm-box--width-full"
        style="flex-grow: 1; overflow: hidden;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-space-between"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-text--ellipsis mm-box--color-text-default"
            >
              <button
                class="cursor-pointer border-none p-0 m-0 bg-transparent"
                data-testid="staking-entrypoint-0x1"
                tabindex="0"
                type="button"
              >
                <div
                  class="flex flex-row items-center pr-2 pl-2 bg-muted rounded"
                >
                  <p
                    class="text-primary-default text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-medium font-default"
                  >
                    Earn
                  </p>
                  <svg
                    class="inline-block w-3 h-3 text-primary-default ml-1"
                    fill="currentColor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11 21v-7.975q-1.6 0-3.075-.612c-1.475-.613-1.85-.988-2.6-1.738S4 9.058 3.6 8.075 3 6.067 3 5V3h2q1.575 0 3.05.612c1.475.612 1.85.988 2.6 1.738q.775.775 1.287 1.7c.512.925.605 1.275.788 1.975q.125-.176.275-.338c.15-.162.208-.22.325-.337q1.125-1.125 2.6-1.738C17.4 6 17.933 6 19 6h2v2q0 1.6-.613 3.075c-.613 1.475-.987 1.85-1.737 2.6S17.037 15 16.062 15.4 14.067 16 13 16v5zm0-10q0-1.2-.462-2.287c-.463-1.087-.746-1.371-1.313-1.938S8.013 5.771 7.288 5.463 5.8 5 5 5q0 1.2.45 2.3c.45 1.1.733 1.383 1.3 1.95s1.217 1 1.95 1.3 1.5.45 2.3.45m2 3a5.92 5.92 0 0 0 4.225-1.75 6 6 0 0 0 1.313-1.95Q19 9.2 19 8q-1.2 0-2.3.463c-1.1.463-1.383.745-1.95 1.312A5.92 5.92 0 0 0 13 14"
                    />
                  </svg>
                </div>
              </button>
            </p>
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-text--ellipsis mm-text--text-align-end mm-box--color-text-default"
            data-testid="multichain-token-list-item-secondary-value"
          />
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-space-between"
        >
          <p
            class="mm-box mm-text mm-text--body-sm-medium mm-text--ellipsis mm-box--color-text-alternative"
            data-testid="multichain-token-list-item-token-name"
          />
          <p
            class="mm-box mm-text mm-text--body-sm-medium mm-text--text-align-end mm-box--color-text-alternative"
            data-testid="multichain-token-list-item-value"
          />
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`TokenListItem should display warning scam modal 1`] = `
<div>
  <div
    class="mm-box multichain-token-list-item mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--width-full mm-box--height-full"
    data-testid="multichain-token-list-item"
  >
    <div
      class="mm-box multichain-token-list-item__container-cell mm-box--padding-top-2 mm-box--padding-right-4 mm-box--padding-bottom-2 mm-box--padding-left-4 mm-box--display-flex mm-box--flex-direction-row mm-box--width-full"
      data-testid="multichain-token-list-button"
      style="height: 62px;"
    >
      <div
        class="mm-box mm-badge-wrapper multichain-token-list-item__badge mm-box--margin-right-4 mm-box--display-inline-block"
      >
        <div
          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-token mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full"
        >
          S
        </div>
        <div
          class="mm-box mm-badge-wrapper__badge-container mm-badge-wrapper__badge-container--rectangular-bottom-right"
        >
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network multichain-token-list-item__badge__avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-default mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-2 box--border-style-solid"
          >
            ?
          </div>
        </div>
      </div>
      <div
        class="mm-box multichain-token-list-item__container-cell--text-container mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-center mm-box--width-full"
        style="flex-grow: 1; overflow: hidden;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-space-between"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-text--ellipsis mm-box--color-text-default"
            >

            </p>
          </div>
          <button
            aria-label=""
            class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-error-default mm-box--background-color-transparent mm-box--rounded-lg"
            data-testid="scam-warning"
          >
            <span
              class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/danger.svg');"
            />
          </button>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-space-between"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-sm-medium mm-text--ellipsis mm-box--color-text-alternative"
              data-testid="token-increase-decrease-percentage-0x0000000000000000000000000000000000000000"
            >
              -
            </p>
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-text--text-align-end mm-box--color-text-alternative"
            data-testid="multichain-token-list-item-value"
          >
            11.9751 ETH
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TokenListItem should display warning scam modal fallback when safechains fails to resolve correctly 1`] = `
<div>
  <div
    class="mm-box multichain-token-list-item mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--width-full mm-box--height-full"
    data-testid="multichain-token-list-item"
  >
    <div
      class="mm-box multichain-token-list-item__container-cell mm-box--padding-top-2 mm-box--padding-right-4 mm-box--padding-bottom-2 mm-box--padding-left-4 mm-box--display-flex mm-box--flex-direction-row mm-box--width-full"
      data-testid="multichain-token-list-button"
      style="height: 62px;"
    >
      <div
        class="mm-box mm-badge-wrapper multichain-token-list-item__badge mm-box--margin-right-4 mm-box--display-inline-block"
      >
        <div
          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-token mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full"
        >
          S
        </div>
        <div
          class="mm-box mm-badge-wrapper__badge-container mm-badge-wrapper__badge-container--rectangular-bottom-right"
        >
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network multichain-token-list-item__badge__avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-default mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-2 box--border-style-solid"
          >
            ?
          </div>
        </div>
      </div>
      <div
        class="mm-box multichain-token-list-item__container-cell--text-container mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-center mm-box--width-full"
        style="flex-grow: 1; overflow: hidden;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-space-between"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-text--ellipsis mm-box--color-text-default"
            >

            </p>
          </div>
          <button
            aria-label=""
            class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-error-default mm-box--background-color-transparent mm-box--rounded-lg"
            data-testid="scam-warning"
          >
            <span
              class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/danger.svg');"
            />
          </button>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-space-between"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-sm-medium mm-text--ellipsis mm-box--color-text-alternative"
              data-testid="token-increase-decrease-percentage-0x0000000000000000000000000000000000000000"
            >
              -
            </p>
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-text--text-align-end mm-box--color-text-alternative"
            data-testid="multichain-token-list-item-value"
          >
            11.9751 ETH
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TokenListItem should render correctly 1`] = `
<div>
  <div
    class="mm-box multichain-token-list-item mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--width-full mm-box--height-full"
    data-testid="multichain-token-list-item"
  >
    <a
      class="mm-box multichain-token-list-item__container-cell multichain-token-list-item__container-cell--clickable mm-box--padding-top-2 mm-box--padding-right-4 mm-box--padding-bottom-2 mm-box--padding-left-4 mm-box--display-flex mm-box--flex-direction-row mm-box--width-full"
      data-testid="multichain-token-list-button"
      href="#"
      style="height: 62px;"
    >
      <div
        class="mm-box mm-badge-wrapper multichain-token-list-item__badge mm-box--margin-right-4 mm-box--display-inline-block"
      >
        <div
          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-token mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full"
        >
          ?
        </div>
        <div
          class="mm-box mm-badge-wrapper__badge-container mm-badge-wrapper__badge-container--rectangular-bottom-right"
        >
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network multichain-token-list-item__badge__avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-default mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-2 box--border-style-solid"
          >
            <img
              alt="network logo"
              class="mm-avatar-network__network-image"
              src="./eth-logo.png"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box multichain-token-list-item__container-cell--text-container mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-center mm-box--width-full"
        style="flex-grow: 1; overflow: hidden;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-space-between"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-text--ellipsis mm-box--color-text-default"
            />
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-text--text-align-end mm-box--color-text-default"
            data-testid="multichain-token-list-item-secondary-value"
          />
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-space-between"
        >
          <p
            class="mm-box mm-text mm-text--body-sm-medium mm-text--ellipsis mm-box--color-text-alternative"
            data-testid="multichain-token-list-item-token-name"
          />
          <p
            class="mm-box mm-text mm-text--body-sm-medium mm-text--text-align-end mm-box--color-text-alternative"
            data-testid="multichain-token-list-item-value"
          />
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`TokenListItem should render crypto balance 1`] = `
<div>
  <div
    class="mm-box multichain-token-list-item mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--width-full mm-box--height-full"
    data-testid="multichain-token-list-item"
  >
    <div
      class="mm-box multichain-token-list-item__container-cell mm-box--padding-top-2 mm-box--padding-right-4 mm-box--padding-bottom-2 mm-box--padding-left-4 mm-box--display-flex mm-box--flex-direction-row mm-box--width-full"
      data-testid="multichain-token-list-button"
      style="height: 62px;"
    >
      <div
        class="mm-box mm-badge-wrapper multichain-token-list-item__badge mm-box--margin-right-4 mm-box--display-inline-block"
      >
        <div
          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-token mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full"
        >
          ?
        </div>
        <div
          class="mm-box mm-badge-wrapper__badge-container mm-badge-wrapper__badge-container--rectangular-bottom-right"
        >
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network multichain-token-list-item__badge__avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-default mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-2 box--border-style-solid"
          >
            ?
          </div>
        </div>
      </div>
      <div
        class="mm-box multichain-token-list-item__container-cell--text-container mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-center mm-box--width-full"
        style="flex-grow: 1; overflow: hidden;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-space-between"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-text--ellipsis mm-box--color-text-default"
            />
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-text--text-align-end mm-box--color-text-default"
            data-testid="multichain-token-list-item-secondary-value"
          />
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-space-between"
        >
          <p
            class="mm-box mm-text mm-text--body-sm-medium mm-text--ellipsis mm-box--color-text-alternative"
            data-testid="multichain-token-list-item-token-name"
          />
          <p
            class="mm-box mm-text mm-text--body-sm-medium mm-text--text-align-end mm-box--color-text-alternative"
            data-testid="multichain-token-list-item-value"
          >
            11.9751 ETH
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TokenListItem should render crypto balance with warning scam 1`] = `
<div>
  <div
    class="mm-box multichain-token-list-item mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--width-full mm-box--height-full"
    data-testid="multichain-token-list-item"
  >
    <div
      class="mm-box multichain-token-list-item__container-cell mm-box--padding-top-2 mm-box--padding-right-4 mm-box--padding-bottom-2 mm-box--padding-left-4 mm-box--display-flex mm-box--flex-direction-row mm-box--width-full"
      data-testid="multichain-token-list-button"
      style="height: 62px;"
    >
      <div
        class="mm-box mm-badge-wrapper multichain-token-list-item__badge mm-box--margin-right-4 mm-box--display-inline-block"
      >
        <div
          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-token mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full"
        >
          ?
        </div>
        <div
          class="mm-box mm-badge-wrapper__badge-container mm-badge-wrapper__badge-container--rectangular-bottom-right"
        >
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network multichain-token-list-item__badge__avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-default mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-2 box--border-style-solid"
          >
            ?
          </div>
        </div>
      </div>
      <div
        class="mm-box multichain-token-list-item__container-cell--text-container mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-center mm-box--width-full"
        style="flex-grow: 1; overflow: hidden;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-space-between"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-text--ellipsis mm-box--color-text-default"
            />
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-text--text-align-end mm-box--color-text-default"
            data-testid="multichain-token-list-item-secondary-value"
          />
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-space-between"
        >
          <p
            class="mm-box mm-text mm-text--body-sm-medium mm-text--ellipsis mm-box--color-text-alternative"
            data-testid="multichain-token-list-item-token-name"
          />
          <p
            class="mm-box mm-text mm-text--body-sm-medium mm-text--text-align-end mm-box--color-text-alternative"
            data-testid="multichain-token-list-item-value"
          >
            11.9751 ETH
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
